--- a/styles.css
+++ b/styles.css
@@ -2,8 +2,11 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
+    font-style: normal;
 }
 .post {
-    width: 350px;
+    width: 500px;
     border: solid black 5px;
 }
